testsuite/tests/checks/access_to_local_objects/test.out
access_to_local_objects.adb:8:32: error: access_to_local_objects - rule violation
8 |        Var2 :         Int_A := Var1'Access;  --  FLAG
  |                                ^^^^^^^^^^^ 

access_to_local_objects.adb:22:24: error: access_to_local_objects - rule violation
22 |        Var5 : Int_A := Var4'Access;   -- FLAG
   |                        ^^^^^^^^^^^ 

access_to_local_objects.adb:36:25: error: access_to_local_objects - rule violation
36 |            P : Int_A := Local'Access; -- FLAG
   |                         ^^^^^^^^^^^^ 

